--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^4.5.14",
+    "axios": "^1.3.4",
+    "font-awesome": "^4.7.0",
     "vue": "^3.2.47"
   },
   "devDependencies": {
